--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>microsyslogic-insight-solar</title>
+    <title>Microsyslogic - Solar Plant Monitor</title>
     <meta name="description" content="Advanced monitoring and management system for solar power plants" />
     <meta name="author" content="Microsyslogic" />
 
-    <meta property="og:title" content="microsyslogic-insight-solar" />
+    <meta property="og:title" content="Microsyslogic - Solar Plant Monitor" />
     <meta property="og:description" content="Advanced monitoring and management system for solar power plants" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.svg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://your-netlify-site.netlify.app" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Microsyslogic - Solar Plant Monitor" />
+    <meta name="twitter:description" content="Advanced monitoring and management system for solar power plants" />
+    <meta name="twitter:image" content="/og-image.svg" />
   </head>
 
   <body>
