--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="/og-image.svg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:url" content="https://your-netlify-site.netlify.app" />
+    <meta property="og:url" content="https://solar-plant.netlify.app/" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Microsyslogic - Solar Plant Monitor" />
