Fix social media image caching issue
- Update og:image to use full URL instead of relative path
- Change from SVG to PNG for better platform compatibility
- Use absolute URLs for all social media meta tags
- This should resolve caching issues on Facebook, Twitter, WhatsApp

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Microsyslogic - Solar Plant Monitor" />
     <meta property="og:description" content="Advanced monitoring and management system for solar power plants" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.svg" />
+    <meta property="og:image" content="https://solar-plant.netlify.app/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://solar-plant.netlify.app/" />
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Microsyslogic - Solar Plant Monitor" />
     <meta name="twitter:description" content="Advanced monitoring and management system for solar power plants" />
-    <meta name="twitter:image" content="/og-image.svg" />
+    <meta name="twitter:image" content="https://solar-plant.netlify.app/og-image.png" />
   </head>
 
   <body>
