--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Cookie Debug Utility (Development Only) -->
+    <script src="/cookie-debug.js"></script>
   </body>
 </html>
